# TerminalGatewayService

./: .gitignore  README.md  app.py  pyproject.toml
service/: __init__.py  authorization.py  blue_print.py  logger.py
